[tool.poetry]
name = "prodigy"
version = "3.0.0"
description = ""
authors = ["Lutz Klinkenberg <lutz.klinkenberg@cs.rwth-aachen.de>", "Philipp Schröer <mail@philworld.de>"]

[tool.poetry.dependencies]
python = "^3.11.0"
lark-parser = "^0.8.5"
algebraic-data-types = "^0.1.3"
attrs = "^19.3.0"
pysmt = "^0.9.0"
click = "^7.1.2"
# sphinxcontrib-katex = "^0.7.1"
graphviz = "^0.15"
networkx = "2.5"
sympy = "^1.8"
matplotlib = "^3.4.2"
probably = { git = "https://github.com/Philipp15b/probably.git", branch = "brand-new" }
pygin = { git = "https://git.rwth-aachen.de/tobias.winkler1/prodigy", branch = "sympy-features" }
Flask = "^2.0.0"
# https://stackoverflow.com/questions/77213053/why-did-flask-start-failing-with-importerror-cannot-import-name-url-quote-fr
Werkzeug = "2.2.2"
# https://stackoverflow.com/questions/78348773/how-to-resolve-np-float-was-removed-in-the-numpy-2-0-release-use-np-float64
numpy = "1.26.4"
# https://stackoverflow.com/questions/77507580/userwarning-figurecanvasagg-is-non-interactive-and-thus-cannot-be-shown-plt-sh
pyqt6 = "^6.7.1"
symengine = "^0.11.0"
# https://stackoverflow.com/questions/77213053/why-did-flask-start-failing-with-importerror-cannot-import-name-url-quote-fr
Werkzeug = "2.2.2"
# https://stackoverflow.com/questions/78348773/how-to-resolve-np-float-was-removed-in-the-numpy-2-0-release-use-np-float64
numpy = "1.26.4"
# https://stackoverflow.com/questions/77507580/userwarning-figurecanvasagg-is-non-interactive-and-thus-cannot-be-shown-plt-sh
pyqt6 = "^6.7.1"
symengine = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.5.2"
mypy = ">0.770"
yapf = "^0.30.0"
# sphinx-autodoc-typehints = "^1.25.3"
# sphinx-bootstrap-theme = "^0.8.1"
# https://stackoverflow.com/questions/77848565/# sphinxcontrib-applehelp-breaking-# sphinx-builds-with-# sphinx-version-less-than-5-0
# sphinxcontrib-applehelp="2.0.0"
# sphinxcontrib-devhelp="2.0.0"
# sphinxcontrib-htmlhelp="2.1.0"
# sphinxcontrib-qthelp="2.0.0"
# sphinxcontrib-serializinghtml="2.0.0"
# sphinx-click = "^5.0.0"
# sphinx-git = "11.0.0"
jinja2 = "3.1.4"
rope = "^0.17.0"
pytest-cov = "^2.9.0"
hypothesis = "^5.18.0"

[tool.poetry.scripts]
prodigy = "prodigy.cli:cli"
web-service = "prodigy.web.web_equivalence:start_server"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
